--- a/UI/totaraphoto/css/style.aquamarineturquoise.css
+++ b/UI/totaraphoto/css/style.aquamarineturquoise.css
@@ -475,6 +475,7 @@ h1 {
 }
 #content .product .flip-container {
   cursor: pointer;
+  /*
   -webkit-perspective: 1000;
   -moz-perspective: 1000;
   perspective: 1000;
@@ -482,6 +483,7 @@ h1 {
   -moz-transform-style: preserve-3d;
   -ms-transform-style: preserve-3d;
   transform-style: preserve-3d;
+  */
 }
 @media (max-width: 767px) {
   #content .product .flip-container img.img-responsive {
@@ -497,12 +499,14 @@ h1 {
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   backface-visibility: hidden;
+  /*
   -webkit-transition: 0.6s;
   transition: 0.6s;
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
   -ms-transform-style: preserve-3d;
   transform-style: preserve-3d;
+  */
   position: relative;
 }
 #content .product .front,
@@ -510,38 +514,50 @@ h1 {
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   backface-visibility: hidden;
+  /*
   -webkit-transition: 0.6s;
   transition: 0.6s;
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
   -ms-transform-style: preserve-3d;
   transform-style: preserve-3d;
+  */
   position: absolute;
   top: 0;
   left: 0;
 }
 #content .product .front {
   z-index: 2;
+  /*
   -webkit-transform: rotateY(0deg);
   -ms-transform: rotateY(0deg);
   transform: rotateY(0deg);
+  */
 }
 #content .product .back {
+  /*
   -webkit-transform: rotateY(-180deg);
   -ms-transform: rotateY(-180deg);
   transform: rotateY(-180deg);
+  */
 }
 #content .product:hover .back {
+  /*
   -webkit-transform: rotateY(0deg);
   -ms-transform: rotateY(0deg);
   transform: rotateY(0deg);
+  
   z-index: 2;
+  */
 }
 #content .product:hover .front {
+  /*
   -webkit-transform: rotateY(180deg);
   -ms-transform: rotateY(180deg);
   transform: rotateY(180deg);
+  
   z-index: 1;
+  */
 }
 #content .product .invisible {
   visibility: hidden;
