--- a/TotaraPhotographyAssociation/Views/NewProduct/Detail.cshtml
+++ b/TotaraPhotographyAssociation/Views/NewProduct/Detail.cshtml
@@ -20,14 +20,24 @@
 
             <div class="col-sm-6">
                 <div class="box">
-                    <h1 class="text-center">@Model.Name</h1>
-                    <p class="price">@Model.Price.ToString("c")</p>
-                    <p class="text-center">
-                        <input value="1" class="col-sm-offset-5 form-control" type="number" style="width: 14%">
-                    </p>
-                    <p class="text-center buttons">
-                        <a href="#" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Add to cart</a>
-                    </p>
+
+                    @using (
+                        Html.BeginForm("AddToCart", "Cart", FormMethod.Post, new { style = "display:inline;" })
+                    )
+                    {
+                        <input type="hidden" name="prdId" value="@Model.Id" />
+                        <input type="hidden" name="rtnUrl" value="@Request.Url.PathAndQuery" />
+
+                        <h1 class="text-center">@Model.Name</h1>
+                        <p class="price">@Model.Price.ToString("c")</p>
+                        <p class="text-center">
+                            <input name="qty" value="1" class="col-sm-offset-5 form-control" type="number" style="width: 14%">
+                        </p>
+                        <p class="text-center buttons">
+                            <a href="javascript:void(0);" onclick="addToCart(this)" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Add to cart</a>
+                        </p>
+
+                    }
                 </div>
 
             </div>
@@ -39,7 +49,7 @@
             <h4>Product description</h4>
             <p>@Model.Description</p>
         </div>
-        
+
     }
     else
     {
@@ -51,3 +61,9 @@
 
 </div>
 <!-- /.col-md-9 -->
+
+<script>
+    function addToCart(prd) {
+        prd.parentNode.parentNode.submit();
+    }
+</script>
