--- a/TotaraPhotographyAssociation/Views/Shared/_Layout.cshtml
+++ b/TotaraPhotographyAssociation/Views/Shared/_Layout.cshtml
@@ -118,9 +118,7 @@
 
             <div class="navbar-buttons">
 
-                <div class="navbar-collapse collapse right" id="basket-overview">
-                    <a href="basket.html" class="btn btn-primary navbar-btn"><i class="fa fa-shopping-cart"></i><span class="hidden-sm">3 items in cart</span></a>
-                </div>
+                @Html.Action("Summary", "Cart")
                 <!--/.nav-collapse -->
 
 
