clear session, redirect admin to home

--- a/TotaraPhotographyAssociation/Views/Home/EditAbout.cshtml
+++ b/TotaraPhotographyAssociation/Views/Home/EditAbout.cshtml
@@ -4,9 +4,7 @@
     string a = ViewBag.Message;
 }
 
-<div class="box" id="contact">
-
-
+<div class="box" id="contact" style="min-height: 448px;">
 
     <h2>Edit About</h2>
 
