fixed Paypal transaction bug, finished error page, added custom error page redirection in the event of exception, fixed textarea height

--- a/TotaraPhotographyAssociation/Views/Home/EditAbout.cshtml
+++ b/TotaraPhotographyAssociation/Views/Home/EditAbout.cshtml
@@ -20,10 +20,10 @@
             )
     {
 
-        <div class="row">
+        <div class="row" style="min-height: 448px;">
             <div class="col-sm-12">
                 <div class="form-group">
-                    <textarea name="aboutus" class="form-control">@a</textarea>
+                    <textarea name="aboutus" class="form-control" style="min-height: 248px;">@a</textarea>
                 </div>
             </div>
 
