added tinymce, but image upload does not work

--- a/TotaraPhotographyAssociation/Views/Home/About.cshtml
+++ b/TotaraPhotographyAssociation/Views/Home/About.cshtml
@@ -8,10 +8,12 @@
     <div class="box" id="text-page" style="min-height: 448px;">
         <h1>About Us</h1>
 
-        <p>@a</p>
-
-
+        <div>
+            @(new HtmlString(a))
     </div>
+
+
+</div>
 
 
 </div>
