--- a/TotaraPhotographyAssociation/Views/Home/EditAbout.cshtml
+++ b/TotaraPhotographyAssociation/Views/Home/EditAbout.cshtml
@@ -46,7 +46,7 @@
             </div>
 
             <div class="col-sm-12 text-center">
-                <button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Save changes</button>
+                <button id="saveAboutBtn" type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Save changes</button>
             </div>
 
         </div>
